--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 					<a href="#" class="burger__link">LINK</a>
 					<a href="#" class="burger__link">LINK</a>
 					<a href="#" class="burger__link">LINK</a>
+					<a href="tel:+9999999999999" class="burger__tel">+99 9999 999 99 99</a>
+					<a href="mailto:awaymedic@gmail.com" class="burger__mail">awaymedic@gmail.com</a>
 					<button class="burger__menu-btn btn btn__stroke">BUTTON</button>
 				</div>
 
